added initial set of tests for testing user model; remove hardcoded rolename dependency; changed role column name to simply name in roles table

--- a/test/fixtures/brands.yml
+++ b/test/fixtures/brands.yml
@@ -1,7 +1,10 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
+xiaowei:
+  name: Xiaowei Inc
 
-two:
-  name: MyString
+smartcell:
+  name: Smartcell Tech
+
+krusche:
+  name: Krusche Crop
