--- a/test/fixtures/sales.yml
+++ b/test/fixtures/sales.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  products: MyString
-  sumtotal: 9.99
+iphone:
+  unitprice: 9.99
 
-two:
-  products: MyString
-  sumtotal: 9.99
+earphones:
+  unitprice: 12.99
