add test for sales

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -7,7 +7,7 @@ alan:
   password: Password1
   email: alanz@sfu.ca
   role: site_admin
-  vendor: shopcomm
+  vendor: smartbuy
 
 bob:
   username: bobgill
